fixed, blur paramater was too high

--- a/src/frosted-glass.scss
+++ b/src/frosted-glass.scss
@@ -4,45 +4,38 @@
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
+  min-height: 100vh;
+  font: 160%/1.6 serif;
   overflow: hidden;
+  margin: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
 body, main::before {
-  //background: url("pexels-photo-355988.jpeg")0/ cover fixed;
-  background: url("http://csssecrets.io/images/tiger.jpg")0/ cover fixed;
-  
+  background: url("pexels-photo-355988.jpeg")0/ cover fixed;
 }
+
 
 main {
   position: relative;
   padding: 2em;
   margin: 0 auto;
-  color: #000;
   overflow: hidden;
   width: 100vmin;
   min-width: 30vw;
-  font-size: 130%;
-  background: hsla(0, 0%, 100%, .3);
-  box-shadow: 0 0 20vmin 0 #000;
+  background: hsla(0, 0%, 100%, .25) border-box;
+  	box-shadow: 0 0 0 1px hsla(0,0%,100%,.3) inset,
+	            0 .5em 1em rgba(0, 0, 0, 0.6);
   text-shadow: 0 1px 1px hsla(0,0%,100%,.3);
-  
-  
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    margin: -30px;
-    z-index: -1;
-    filter: blur(200px);
-    
-  }
+}
 
+main::before {
+  @include fit();
+  content: '';
+  margin: -30px;
+  z-index: -1;
+	filter: blur(20px);
 }
 
 
